welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:1: error: Missing closing brace `}' assumed here
def marque() {baisseBrosse();leveBrosse()}
^Array2:1: error: expected class or object definition
def marque() {baisseBrosse();leveBrosse()}
^Array2:3: error: expected start of definition
override def run() {var n:Int=getMondeHauteur()
         ^Array2:18: error: Missing closing brace `}' assumed here
}
^